Add basic filter definitions
